2009-02-25 Pierre Wieser <pwieser@trychlos.org>

	Fix validity checks.

	* src/core/na-data-boxed.c
	(string_is_valid, locale_is_valid, slist_is_valid, pointer_is_valid,
	uint_is_valid): Fix individual validity checks of elementary data.

	* src/core/na-factory-object.c (na_factory_object_is_valid):
	First check for presence of mandatory data, then check present data.

	* src/core/na-iduplicable.c (na_iduplicable_duplicate):
	Also duplicate the status of the source object.

	* src/core/na-io-provider.c (na_io_provider_read_items):
	Add a comment.

	* src/core/na-object-item.c (na_object_item_copy):
	* src/core/na-object.c (na_object_object_check_status):
	Fix minor typo.

	* src/nact/nact-tree-model.c (nact_tree_model_fill):
	No more check status of newly duplicated objects.

	* src/nact/base-window.c (instance_dispose):
	Only set dispose after having tested for main window.

	* src/api/na-object-api.h:
	Distinguish between profile and item on get_label.

	* src/core/na-gtk-utils.c:
	* src/core/na-gtk-utils.h: New files.
	* src/core/Makefile.am: Updated accordingly.

	* src/core/na-data-boxed.c:
	* src/core/na-gconf-monitor.c:
	* src/core/na-importer-ask.c:
	* src/io-gconf/nagp-gconf-provider.c:
	* src/io-gconf/nagp-reader.c:
	* src/io-gconf/nagp-reader.h:
	Fix objects reading from GConf.

	* src/nact/nact-assistant-import.c:
	* src/nact/nact-iprefs.c:
	* src/nact/nact-preferences-editor.c:
	* src/nact/nact-tree-model-dnd.c:
	* src/utils/nautilus-actions-schemas.c:
	Move GConfClient to private object data, unref on dispose.

2009-02-24 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-iimporter.h:
	* src/core/Makefile.am:
	* src/core/na-iimporter.c:
	* src/core/na-importer-ask.c:
	* src/core/na-importer-ask.h:
	* src/core/na-iprefs.c:
	* src/core/na-iprefs.h:
	* src/io-xml/naxml-reader.c:
	* src/nact/Makefile.am:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-iprefs.c:
	* src/nact/nact-iprefs.h:
	* src/nact/nact-main-window.h: